# minuit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.back  Makefile  README  build.sh  clean.sh  make.sh
cmake/: dependencies.cmake
data/: Doxyfile  crop.sh
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  Makefile  app.c  app.h  common.h  context.c  context.h  draw.c  draw.h  minuit.c  minuit.h  node.c  node.h  opengl.h  scene.c  scene.h  ui.c  ui.h
src/app/: CMakeLists.txt  app.c  app.h  app_keyboard.c  app_mouse.c  app_sdl.c  app_window.c
src/base/: CMakeLists.txt  base.c  base.h  clock.c  clock.h  common.h  cpt.c  cpt.h  eng.c  eng.h  lst.c  lst.h  mem.c  mem.h  net.c  net.h  opengl.h  osc.c  osc.h  proc.c  proc.h  ptr.c  ptr.h  rnd.c  rnd.h  shm.c  shm.h  sock.c  sock.h  srv.c  srv.h  str.c  str.h  sys.c  sys.h  util.c  util.h  vec.c  vec.h  vol.c  (+1 more)
src/core/: CMakeLists.txt  common.h  cpt.h  lst.h  net.h  opengl.h  str.c  str.h  util.c
src/ctx/: CMakeLists.txt  context.c  context.h  ctx.c  ctx.h  ctx_block.c  ctx_block_menu.c  ctx_brick.c  ctx_browser.c  ctx_camera.c  ctx_compute.c  ctx_event.c  ctx_keyboard.c  ctx_load.c  ctx_mouse.c  ctx_option.c  ctx_process.c  ctx_render.c  ctx_rhizome.c  ctx_save.c  ctx_scene.c  ctx_ui.c  ctx_video.c
src/draw/: CMakeLists.txt  draw.c  draw.h  draw_block.c  draw_brick.c  draw_light.c  draw_mesh.c  draw_mesh_edge.c  draw_mesh_im.c  draw_mesh_va.c  draw_object.c  draw_point_va.c  sketch.c  sketch.h
src/lib/: CMakeLists.txt  Makefile  action.c  action.h  app_keyboard.c  app_mouse.c  app_window.c  app_x.c  binding.c  binding.h  block.c  block.h  block_draw.c  block_update.c  brick.c  brick.h  brick_act.c  brick_cls.c  brick_draw.c  brick_exe.c  brick_update.c  camera.c  camera.h  clock.c  clock.h  ctx.h  ctx_camera.c  ctx_compute.c  ctx_event.c  ctx_graph.c  ctx_keyboard.c  ctx_links.c  ctx_load.c  ctx_mouse.c  ctx_option.c  ctx_process.c  ctx_render.c  ctx_rhizome.c  ctx_save.c  ctx_scene.c  (+81 more)
src/lib/brick/: CMakeLists.txt  block.c  block.h  brick.c  brick.h  brick_act.c  brick_cls.c  brick_exe.c  plug.h  plug_cls.c  rhizome.c  rhizome.h  set.c  set.h
src/lib/core/: CMakeLists.txt  array.c  array.h  dict.c  dict.h  graph.c  graph.h  list.c  vector.c  vlst.c  vlst.h
src/lib/data/: CMakeLists.txt  action.c  action.h  binding.c  binding.h  data.c  data.h  datum.c  datum.h  event.c  event.h  file.c  file.h  file_data.c  memory.c  memory.h  mode.c  mode.h  option.h
src/lib/object/: CMakeLists.txt  camera.c  camera.h  geometry.c  geometry.h  image.c  image.h  image_jpg.c  image_png.c  light.c  light.h  material.c  material.h  mesh.c  mesh.h  mesh_buffer.c  obj.c  object.c  object.h  texture.c  texture.h
src/lib/screen/: CMakeLists.txt  log.c  log.h  screen.c  screen.h  term.c  term.h  txt.c  txt.h  txt_ttf.c  viewport.c  viewport.h
src/ops/: CMakeLists.txt  op.c  op.h  op_action.c  op_add_brick.c  op_add_object.c  op_camera.c  op_debug.c  op_register.c  op_texture.c
src/scene/: CMakeLists.txt  node.c  node.h  scene.c  scene.h
src/ui/: CMakeLists.txt  screen_bricks_menu.c  screen_browser.c  screen_generic.c  screen_info.c  screen_init.c  screen_intro.c  screen_log.c  screen_main.c  screen_object.c  screen_sets.c  screen_view3d.c  ui.c  ui.h
src/util/: CMakeLists.txt  Makefile  common.h  cpt.c  lst.c  lst.h  mem.c  mem.h  net.c  network.h  ptr.c  ptr.h  rnd.h  system.h  u_calc.c  u_client.c  u_file.c  u_img.c  u_img_jpg.c  u_img_png.c  u_lst.c  u_main.c  u_off_screen.c  u_rand.c  u_server.c  u_socket.c  u_sort.c  u_string.c  u_system.c  u_term.c  u_vector.c  u_volume.c  util.c  util.h  vol.c
