# LIB
set(SRC
	action.c
	action.h
	app_keyboard.c
	app_mouse.c
	app_window.c
	binding.c
	binding.h
	block.c
	block_draw.c
	block.h
	block_update.c
	brick_act.c
	brick.c
	brick_cls.c
	brick_draw.c
	brick.h
	brick_update.c
	camera.c
	camera.h
	clock.c
	clock.h
	CMakeLists.txt
	ctx_camera.c
	ctx_compute.c
	ctx.h
	ctx_keyboard.c
	ctx_load.c
	ctx_mouse.c
	ctx_option.c
	ctx_process.c
	ctx_render.c
	ctx_rhizome.c
	ctx_save.c
	ctx_scene.c
	ctx_ui.c
	ctx_video.c
	data.c
	data.h
	dict.c
	dict.h
	engine.c
	engine.h
	event.c
	event.h
	file.c
	file.h
	graph.c
	graph.h
	image.c
	image.h
	image_jpg.c
	image_png.c
	light.c
	light.h
	list.c
	list.h
	geometry.c
	geometry.h
	log.c
	log.h
	material.c
	material.h
	memory.c
	memory.h
	mesh_buffer.c
	mesh.c
	mesh.h
	mesh_transform.c
	mode.c
	mode.h
	obj.c
	object.c
	object_draw.c
	object.h
	obj.h
	op_action.c
	op_add_brick.c
	op_add_object.c
	op.c
	op_camera.c
	op_debug.c
	op.h
	op_texture.c
	option.h
	plug_cls.c
	plug.h
	process.h
	rhizome.c
	rhizome.h
	screen_browser.c
	screen.c
	screen.h
	screen_init.c
	screen_intro.c
	server.c
	server.h
	set.c
	set.h
	sketch.c
	sketch.h
	term.c
	term.h
	texture.c
	texture.h
	txt.c
	txt.h
	vector.c
	vector.h
	viewport.c
	viewport.h
	vlst.c
	)
 
add_library(minuit-lib STATIC ${SRC})
